# ThermalManagement

./: .gitignore  plan.md  pyproject.toml
configs/: data.yaml  default.yaml  joints_g1_29dof.yaml  topics.yaml
cpp/: CMakeLists.txt  conanfile.txt  vcpkg.json
cpp/thermal_infer/: CMakeLists.txt  README.build.txt
cpp/thermal_infer/include/thermal_infer/: placeholder.hpp
cpp/thermal_infer/src/: main.cpp
docs/: task_memory.md
scripts/: _config.py  collect_session.py  export_onnx.py  print_body_temperatures.py  sniff_dds_topics.py  train.py
src/thermal_g1/: __init__.py
src/thermal_g1/collector/: __init__.py
src/thermal_g1/datasets/: __init__.py
src/thermal_g1/evaluation/: __init__.py
src/thermal_g1/export/: __init__.py
src/thermal_g1/features/: __init__.py
src/thermal_g1/models/: __init__.py
src/thermal_g1/training/: __init__.py
